--- a/rpc-server/src/main/resources/server-config.properties
+++ b/rpc-server/src/main/resources/server-config.properties
@@ -1,4 +1,4 @@
-# ZooKeeper \u670d\u52a1\u5668
+# ZooKeeper \u670D\u52A1\u5668\u5730\u5740
 registry.address=127.0.0.1:2181
-# RPC \u670d\u52a1\u5668
-server.address=127.0.0.1:8000
+# RPC \u670D\u52A1\u5668\u5730\u5740
+server.address=127.0.0.1:18000
