--- a/rpc-server/pom.xml
+++ b/rpc-server/pom.xml
@@ -6,9 +6,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>rpc-server</artifactId>
-    <packaging>jar</packaging>
 
     <name>rpc-server</name>
     <url>http://maven.apache.org</url>
@@ -21,8 +19,13 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.zeal</groupId>
+            <artifactId>rpc-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 </project>
