--- a/rpc-test/pom.xml
+++ b/rpc-test/pom.xml
@@ -8,7 +8,6 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>rpc-test</artifactId>
-    <packaging>jar</packaging>
 
     <name>rpc-test</name>
     <url>http://maven.apache.org</url>
@@ -21,8 +20,19 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
+            <scope>compile</scope>
+        </dependency>
+
+        <!--rpc框架-->
+        <dependency>
+            <groupId>com.zeal</groupId>
+            <artifactId>rpc-server</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.zeal</groupId>
+            <artifactId>rpc-client</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
